# DeepMicroClass

./: .gitignore  DMF.py  DeepMicroClass.yml  DeepMicrobeFinder.yml  LICENSE  MANIFEST.in  README.md  SequenceData.py  batch_encode.sh  batch_predict.sh  batchrun.sh  batchrun_lstm.sh  constants.py  encode.py  encoding_model.py  ipython_history.md  predict.py  predict_pytorch.py  pyproject.toml  requirements_dev.txt  run_batch_encode.sh  setup.cfg  setup.py  sweep.yml  test.fasta  test.py  test_random_forest.py  test_spot.py  tox.ini  training.py  training_lstm.py  training_pytorch.py  training_pytorch_2class.py  training_pytorch_3class.py  utils.py
model/: DMF.py  DeepMicroClass.py
models/: model_DNA_codon.h5  model_DNA_codon_1000.h5
output/: EukTr.fasta_gt1000bp_pred.csv  EukVal.fasta_pred_one-hot_hybrid.txt  EukVal.fasta_pred_one-hot_single.txt  EukVirusTr.fasta_pred_one-hot_hybrid.txt  PlasmidVal.fasta_pred_one-hot_hybrid.txt  PlasmidVal.fasta_pred_one-hot_single.txt  ProkVal.fasta_gt1000bp_pred.txt  ProkVal.fasta_pred_one-hot_hybrid.txt  ProkVal.fasta_pred_one-hot_single.txt  ProkVirusVal.fasta_pred_one-hot_hybrid.txt  test.fasta_pred_one-hot_hybrid.txt  test.fasta_pred_one-hot_single_1000.txt  test.fasta_pred_one-hot_single_2000.txt  test.fasta_pred_one-hot_single_3000.txt  test.fasta_pred_one-hot_single_500.txt  test.fasta_pred_one-hot_single_5000.txt  test.fasta_pred_one-hot_single_all.txt  test_result_2.txt  test_result_one-hot_1000.csv
perf_summary/: dmc.csv  dmc_for_kaiju.csv  dmc_old.csv  dmf.csv  dvf.csv  genomad_multiclass.csv  genomad_plasmid.csv  genomad_vir.csv  kaiju_summary.csv  metaeuk_summary.csv  misclassified_dmc.csv  misclassified_dmc_euk.csv  misclassified_dmc_plas.csv  misclassified_dmc_vir.csv  misclassified_dvf.csv  misclassified_genomad_plasmid.csv  misclassified_genomad_prokvir.csv  misclassified_plasflow.csv  misclassified_ppr_plasmid.csv  misclassified_ppr_prokvir.csv  misclassified_tiara.csv  misclassified_vibrant.csv  misclassified_virsorter2.csv  misclassified_whokaryote.csv  mistake_class_genomad.csv  mistake_names_genomad.csv  plasflow.csv  ppr_multiclass.csv  ppr_plasmid.csv  ppr_vir.csv  tiara.csv  vibrant.csv  virsorter2.csv  whokaryote.csv
plot_figures/: r-env.yml
scripts/: generate_benchmark_dataset.py  generate_benchmark_result.py  launch_tensorboard.sh  parallel_prodigal.sh  parse_dmf.py  parse_dvf.py  (+27 more)
(+185 files in other folders)
