[metadata]
name = DeepMicroClass
description = DeepMicroClass, a deep learning based contig prediction tool
version = 1.0.1
author = Tianqi Tang, Shengwei Hou, Siliangyu Cheng, Jed A. Fuhrman, and Fengzhu Sun
author_email = tianqit@usc.edu
platforms = any
license = USC-RL v1.0
license_file = LICENSE
url = https://github.com/tianqitang1/ContigNet
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: University of Southern California Research License v1.0
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Artificial Intelligence