[metadata]
name = DeepMicroClass
description = DeepMicroClass, a deep learning based contig prediction tool
version = 1.0.6
author = Tianqi Tang, Shengwei Hou, Siliangyu Cheng, Jed A. Fuhrman, and Fengzhu Sun
author_email = tianqit@usc.edu
platforms = any
license = USC-RL v1.0
license_files = LICENSE
url = https://github.com/chengsly/DeepMicroClass
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
python_requires = >=3.8
packages = DeepMicroClass
package_dir =
    =src
include_package_data = True
install_requires =
    pandas
    numpy
    biopython
    ete3
    torch
    pytorch-lightning
    torchmetrics
    tensorboard
    tqdm
    scikit-learn

[options.entry_points]
console_scripts =
    DeepMicroClass = DeepMicroClass.__main__:main